# nixos-update-checker

./: .gitignore  README.md  flake.nix  pyproject.toml
assets/: nixos-update-checker-autostart.desktop  nixos-update-checker.desktop
nix/: discovery.nix  manifest.nix  module.nix  package.nix
scripts/: live-regression-test.sh
src/: apply.sh  backend.sh  checker.sh  main.cpp
src/nixos_update_checker/: __init__.py  checker.py  gui.py  logic.py
tests/: checker-fixtures.sh  test_checker.py  test_gui.py  test_logic.py
tests/fixtures/: baseline-closure.json  candidate-closure.json
