[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nixos-update-checker"
version = "1.0.0"
description = "Native Qt for Python NixOS flake update checker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.5"]

[project.scripts]
check-nixos-updates = "nixos_update_checker.checker:main"
nixos-update-checker = "nixos_update_checker.gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true
